[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/levels/levelelements/items/heart.gd" type="Script" id=1]
[ext_resource path="res://assets/Light.png" type="Texture" id=2]
[ext_resource path="res://scenes/levels/levelelements/assets/coin.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 221.61

[node name="coinitem" type="Node2D"]

[node name="coinitem" type="Area2D" parent="."]
scale = Vector2( 0.15, 0.15 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coinitem"]
shape = SubResource( 1 )

[node name="coinitem" type="Sprite" parent="coinitem"]
modulate = Color( 1, 1, 1, 0.627451 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="coinitem"]
texture = ExtResource( 2 )
texture_scale = 4.0
energy = 0.1

[connection signal="area_entered" from="coinitem" to="coinitem" method="_on_coinitem_area_entered"]
