[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/levels/levelelements/assets/heartitem.png" type="Texture" id=1]
[ext_resource path="res://assets/Light.png" type="Texture" id=2]
[ext_resource path="res://scenes/levels/levelelements/items/heart.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 264.121

[node name="heartitem" type="Node2D"]

[node name="heartitem" type="Area2D" parent="."]
scale = Vector2( 0.1, 0.1 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="heartitem"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Heartitem" type="Sprite" parent="heartitem"]
modulate = Color( 1, 1, 1, 0.627451 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="heartitem"]
texture = ExtResource( 2 )
texture_scale = 4.0
energy = 0.1

[connection signal="area_entered" from="heartitem" to="heartitem" method="_on_heartitem_area_entered"]
