[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/levels/levelelements/assets/shielditem.png" type="Texture" id=1]
[ext_resource path="res://scenes/levels/levelelements/items/heart.gd" type="Script" id=2]
[ext_resource path="res://assets/Light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 218.357

[node name="shielditem" type="Node2D"]

[node name="shielditem" type="Area2D" parent="."]
scale = Vector2( 0.15, 0.15 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shielditem"]
shape = SubResource( 1 )

[node name="Shielditem" type="Sprite" parent="shielditem"]
modulate = Color( 1, 1, 1, 0.627451 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="shielditem"]
texture = ExtResource( 3 )
texture_scale = 4.0
energy = 0.1

[connection signal="area_entered" from="shielditem" to="shielditem" method="_on_shielditem_area_entered"]
