[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/levels/levelelements/assets/speedboostitem.png" type="Texture" id=1]
[ext_resource path="res://scenes/levels/levelelements/items/heart.gd" type="Script" id=2]
[ext_resource path="res://assets/Light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 46.6476

[node name="speedboostitem" type="Node2D"]

[node name="speedboostitem" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="speedboostitem"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="speedboostitem"]
modulate = Color( 1, 1, 1, 0.627451 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="speedboostitem"]
texture = ExtResource( 3 )
texture_scale = 4.0
energy = 0.1

[connection signal="area_entered" from="speedboostitem" to="speedboostitem" method="_on_speedboostitem_area_entered"]
